# misis2025s-22-02-vatagina-e-e

./: .build.bat  .gitignore  CMakeLists.txt  README.md
prj.cv/: CMakeLists.txt
prj.cv/examples/: IMG_6448.HEIC  IMG_6449.HEIC  IMG_6919.HEIC  IMG_6920.HEIC  IMG_6922.HEIC  IMG_6923.HEIC  IMG_6925.HEIC  IMG_6926.HEIC  IMG_6927.HEIC  IMG_6928.HEIC  IMG_6930.HEIC  IMG_6933.HEIC  IMG_6936.HEIC  IMG_6937.HEIC  IMG_6938.HEIC  IMG_6940.HEIC  IMG_6941.HEIC  IMG_6942.HEIC  IMG_6943.HEIC  IMG_6944.HEIC  IMG_6945.HEIC  IMG_6948.HEIC  input_data.txt
prj.cv/libname/: CMakeLists.txt  libname.cpp
prj.cv/libname/include/: libname.hpp
prj.cv/test/: CMakeLists.txt  test02.cpp  test1.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: README.md  task01-01.cpp  task01-02.cpp
prj.lab/lab02/: CMakeLists.txt  README.md  hist.cpp  task02.cpp  test.cpp
prj.lab/lab03/: CMakeLists.txt  README.md  test3.cpp  test3_1.cpp
prj.lab/lab04/: CMakeLists.txt  README.md  runScript.json  task04-01.cpp  task04-02.cpp  task04-03.cpp  task04.h  test4.cpp
prj.lab/lab04/input/: config1.json
prj.lab/lab04/output/collage/: collageI.json  collageOUT.json  collage_gt.json
prj.lab/lab05/: CMakeLists.txt  README.md  task05.cpp
prj.lab/lab06/: CMakeLists.txt  README.md  task06.cpp
prj.lab/lab07/: CMakeLists.txt  blob_report.md  boundaries.cpp  task07-01.cpp  task07-02.cpp
prj.lab/lab08/: CMakeLists.txt  README.md  task.cpp  task08-01.cpp
prj.lab/semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
